--- a/index.html
+++ b/index.html
@@ -32,26 +32,19 @@
     <ul class="botoes" id="personagensBotoes">
       <!-- carregado automaticamente -->
     </ul>
-    <footer>
-      <div id="direitos" class="direitos">
-        <div class="loading">
-          <p class="load"></p>
-        </div>
-      </div>
-    </footer>
     <scripts>
       <script src="./src/js/loader-personagens.js" defer></script>
       <script src="./src/js/index.js" defer></script>
     </scripts>
     <autoscripts>
       <!-- <script src="https://pingobras.glitch.me/src/js/links.js" defer></script> -->
-      <script src="https://pingobras.glitch.me/src/js/load-scripts.js"></script>
+      <!-- <script src="https://pingobras.glitch.me/src/js/load-scripts.js"></script> -->
     </autoscripts>
     <host>
-      <script
+      <!-- <script
         src="https://pingobras.glitch.me/src/js/load-host.js"
         defer
-      ></script>
+      ></script> -->
     </host>
   </body>
 </html>
